docs: documenting authentication endpoints
